--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,24 @@
+body{
+  background-color: blue;
+}
+
+footer {
+  background-color: black;
+  text-align: center;
+  margin-top: auto;
+  color: white;
+  padding: 8px;
+  margin-top: 500px;
+}
+
+
+p{
+  color: white;
+}
+
 .App {
   text-align: center;
+ 
 }
 
 .App-logo {
